[gd_scene format=3 uid="uid://cdseqkfxigxbm"]

[ext_resource type="Script" uid="uid://blcqmi7per5r5" path="res://Joel/scenes/item_spawner.gd" id="1_vpjak"]
[ext_resource type="Resource" uid="uid://bt71f4d7tde02" path="res://data/items data/chilaquil 1.tres" id="2_6quaa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6quaa"]
size = Vector2(70, 72)

[node name="ItemSpawner" type="Node2D" unique_id=1900992696]
script = ExtResource("1_vpjak")
item_to_spawn = ExtResource("2_6quaa")

[node name="Spawn" type="Button" parent="." unique_id=1767812913]
custom_minimum_size = Vector2(90, 90)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -45.0
offset_right = 45.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpawnPos" type="ColorRect" parent="Spawn" unique_id=2073299469]
unique_name_in_owner = true
custom_minimum_size = Vector2(90, 90)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -45.0
offset_right = 45.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(45, 45)
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2

[node name="SpawnArea" type="Area2D" parent="Spawn/SpawnPos" unique_id=31324838]
position = Vector2(45, 45)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spawn/SpawnPos/SpawnArea" unique_id=165845619]
shape = SubResource("RectangleShape2D_6quaa")

[connection signal="pressed" from="Spawn" to="." method="_on_spawn_pressed"]
[connection signal="area_entered" from="Spawn/SpawnPos/SpawnArea" to="." method="_on_spawn_area_area_entered"]
[connection signal="area_exited" from="Spawn/SpawnPos/SpawnArea" to="." method="_on_spawn_area_area_exited"]
